medicines-api/overlays/non-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicines-api
  namespace: medicines-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: medicines-api
          image: mhraproductsnonprodregistry.azurecr.io/products/medicines-api
