medicines-api/overlays/non-prod/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medicines-api
spec:
  hosts:
    - non-prod.mhra.gov.uk
